Fix text spacing in prediction section

--- a/flaskApp/static/css/style.css
+++ b/flaskApp/static/css/style.css
@@ -194,6 +194,7 @@ main{
 
 #predictionOutput {
     padding-bottom: 20px;
+    padding-top: 10px;
     font-size: 18px;
 }
 
